Added POST CalculateCarbonFootprintImpact endpoint
